# kinfu_remake

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  demo.cpp  obj_writer.cpp  obj_writer.h
cmake/: Targets.cmake
kfusion/include/io/: capture2.hpp
kfusion/src/: capture2.cpp  kinfu.cpp  projective_icp.cpp
